--- a/src/main/resources/static/create_event.html
+++ b/src/main/resources/static/create_event.html
@@ -186,7 +186,7 @@ body, html, .container-fluid {
 Select a category that best describes the event.
 </div>
 <div class="row">
-<select class="form-control" name="eventCategory" id="event_category">
+<select class="form-control" name="event_category" id="event_category">
       <option>Business</option>
       <option>Outdoors</option>
       <option>Education</option>
